# hello_python_uv_library

./: pyproject.toml
src/hello_python_uv_library/: __init__.py  aisatsu.py  greetings.py
tests/test_hello_python_uv_library/: test_hello.py
