[project]
name = "hello-python-uv-library"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Takahito Urai", email = "uraitakahito@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
