[project]
name = "hello-python-uv-library"
version = "0.1.2"
description = "Add your description here"
authors = [
    { name = "Takahito Urai", email = "uraitakahito@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "hello-python-add",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.uv.sources]
hello-python-add = { git = "https://github.com/uraitakahito/hello_python_add" }
